# ksmoothdock

./: .gitignore  KSmoothDock.files  KSmoothDock.includes  KSmoothDock.pro  README  dockitem.cc  dockitem.h  dockmodel.cc  dockmodel.h  dockview.h  ksmoothdock_automoc.cc  paraboliczoomview.cc  paraboliczoomview.h
.github/workflows/: build.yml
docs/: index.html
src/: CMakeLists.txt  KSmoothDock.pro  add_panel_dialog.cc  add_panel_dialog.h  add_panel_dialog.ui  add_panel_dialog_test.cc  appearance_settings_dialog.cc  appearance_settings_dialog.h  appearance_settings_dialog.ui  appearance_settings_dialog_test.cc  application_menu.cc  application_menu.h  application_menu_config_dialog.cc  application_menu_config_dialog.h  application_menu_settings_dialog.cc  application_menu_settings_dialog.h  application_menu_settings_dialog.ui  application_menu_settings_dialog_test.cc  application_menu_test.cc  calendar.cc  calendar.h  clock.cc  clock.h  command_utils.h  command_utils_test.cc  config_dialog.cc  config_dialog.h  config_dialog_test.cc  config_helper.cc  config_helper.h  desktop_selector.cc  desktop_selector.h  desktop_selector_test.cc  dock_item.h  dock_manager.cc  dock_manager.h  dock_manager_test.cc  dock_panel.cc  dock_panel.h  dock_panel_test.cc  (+38 more)
src/kde4/: CMakeLists.txt
src/model/: application_menu_config.cc  application_menu_config.h  application_menu_config_test.cc  config_helper.cc  config_helper.h  icon_override_rule.h  multi_dock_model.cc  multi_dock_model.h  task_info.h
src/utils/: command_utils.h  command_utils_test.cc  draw_utils.h  font_utils.h  task_helper.cc  task_helper.h  task_utils.cc  task_utils.h  wallpaper_helper.cc  wallpaper_helper.h  wallpaper_utils.cc
src/view/: add_panel_dialog.cc  add_panel_dialog.h  add_panel_dialog.ui  add_panel_dialog_test.cc  appearance_settings_dialog.cc  appearance_settings_dialog.h  appearance_settings_dialog.ui  appearance_settings_dialog_test.cc  application_menu.cc  application_menu.h  application_menu_settings_dialog.cc  application_menu_settings_dialog.h  application_menu_settings_dialog.ui  application_menu_settings_dialog_test.cc  application_menu_test.cc  calendar.cc  calendar.h  clock.cc  clock.h  desktop_selector.cc  desktop_selector.h  desktop_selector_test.cc  dock_item.h  dock_panel.cc  dock_panel.h  dock_panel_test.cc  edit_launchers_dialog.cc  edit_launchers_dialog.h  edit_launchers_dialog.ui  edit_launchers_dialog_test.cc  icon_based_dock_item.cc  icon_based_dock_item.h  icon_override_rules_dialog.cc  icon_override_rules_dialog.h  icon_override_rules_dialog.ui  iconless_dock_item.cc  iconless_dock_item.h  launcher.cc  launcher.h  multi_dock_view.cc  (+14 more)
